--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Eyes | Todo lo esencial para tu mascota</title>
-
+    <meta name="description" content="Animal Eyes ofrece lo mejor en accesorios y comodidad para tus mascotas. Descubre nuestras tiendas, conócenos y contáctanos.">
     <link rel="shortcut icon" href="./assets/logo/Logo princ.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
