--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis laudantium deleniti voluptas officia quisquam libero dolor optio recusandae quia quasi.
             </p>
         </section>
+        
+        <img src="assets/img/cute-and-happy-dog-png.png" alt="">
+
 
     </main>
 
@@ -57,7 +60,7 @@
                 <ul>
                     <li>
                         <a href="https://www.instagram.com/animaleyes.ok/" target="_blank">
-                            <img src="./assets/logo/2227.jpg" alt="Instagram" class="logos">
+                            <img src="./assets/logo/ig.png" alt="Instagram" class="logos">
                         </a>
                     </li>
 
