--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -125,10 +125,34 @@
 </main>
 
 <footer class="main-footer">
-    
 
-    
-    <h3>Pagina desarrolada por Tomas Gorosito</h3>
+        <div class="footer-redes">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://www.instagram.com/animaleyes.ok/" target="_blank">
+                            <img src="../assets/logo/ig.png" alt="Instagram" class="logos">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://wa.me/5491160572081?text=Hola,%20¿cómo%20va?%20Quería%20consultarles%20el%20precio%20de%20este%20producto:" target="_blank">
+                            <img src="../assets/logo/pngegg.png" alt="WhatsApp" class="logos">
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="footer-copy">
+            <p>Pagina desarrollada por Tomas Gorosito</p>
+        </div>
+
+        <div class="footer-marca">
+            <p>Animal Eyes</p>
+        </div>
+
+    </footer>
 
 
 </footer>
