--- a/pages/faq.html
+++ b/pages/faq.html
@@ -44,7 +44,7 @@
                 <ul>
                     <li>
                         <a href="https://www.instagram.com/animaleyes.ok/" target="_blank">
-                            <img src="../assets/logo/2227.jpg" alt="Instagram" class="logos">
+                            <img src="../assets/logo/ig.png" alt="Instagram" class="logos">
                         </a>
                     </li>
 
