--- a/pages/tiendas.html
+++ b/pages/tiendas.html
@@ -55,7 +55,7 @@
                 <ul>
                     <li>
                         <a href="https://www.instagram.com/animaleyes.ok/" target="_blank">
-                            <img src="../assets/logo/2227.jpg" alt="Instagram" class="logos">
+                            <img src="../assets/logo/ig.png" alt="Instagram" class="logos">
                         </a>
                     </li>
 
