--- a/index.html
+++ b/index.html
@@ -36,19 +36,15 @@
     <main class="main-home">
 
         <section class="hero">
-            <h2>
-                <a href="https://www.instagram.com/animaleyes.ok/" target="_blank">
-                    Instagram
-                </a>
-            </h2>
-
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis laudantium deleniti voluptas officia quisquam libero dolor optio recusandae quia quasi.
-            </p>
-        </section>
-        
-        <img src="assets/img/cute-and-happy-dog-png.png" alt="">
-
+            <h1>Bienvenidos a Animal Eyes</h1>
+            <p>Especialistas en el cuidado de tu mejor amigo</p>
+</section>
+        <img src="assets/img/cute-and-happy-dog-png.png" class= img-princ alt="Perro animal eyes">
+        <section class="shop-invite">
+        <h2>Todo lo que su mirada necesita</h2>
+        <p>Encontrá accesorios, gotas y protectores de la mejor calidad.</p>
+        <a href="pages/Tiendas.html" class="btn-tienda">Ir a la Tienda Online</a>
+</section>
 
     </main>
 
