--- a/pages/Sobre Nosotros.html
+++ b/pages/Sobre Nosotros.html
@@ -33,24 +33,38 @@
     </header>
 
     <!-- MAIN -->
-    <main class="main-home">
+<main class="nosotros-container">
+    <section class="nosotros-hero">
+        <h1>Sobre Nosotros</h1>
+        <p class="intro-text">
+            En <strong>Animal Eyes</strong>, no solo cuidamos la mirada de tu mejor amigo, 
+            sino que nos apasiona su bienestar integral. Somos tu aliado de confianza para 
+            que tu mascota crezca sana, fuerte y feliz.
+        </p>
+    </section>
 
-        <section class="sobre-contenido">
-            <h2>Sobre nosotros</h2>
+    <section class="productos-grid">
+        <div class="categoria-card">
+            <h3>Nutrición</h3>
+            <p>Contamos con los mejores alimentos para perros, gatos y pájaros. Variedad de marcas y necesidades nutricionales.</p>
+        </div>
 
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque porro necessitatibus, a veritatis optio laborum tempore veniam odit voluptatibus cumque dolor error repellendus! Inventore incidunt porro ab quam! Ab, dolore!
-                Corrupti ut numquam repudiandae dignissimos accusamus rerum porro. Similique, autem ullam. Earum explicabo vitae, a modi quasi harum similique alias nobis soluta dolor excepturi ullam maiores, molestiae, nam saepe iure.
-                Dolor consequatur odit sed officiis quia possimus, quod quaerat veritatis at reiciendis dolorem quibusdam nam harum illo exercitationem mollitia aut velit vero repellat obcaecati, alias necessitatibus. Facere doloremque possimus dicta?
-                Minus natus nemo vero expedita ipsam, nulla fugit temporibus laboriosam nam nobis sequi voluptatum in obcaecati impedit? Corporis modi, officiis voluptate enim esse exercitationem iure sit, fuga dolorem tenetur reiciendis.
-            </p>
-        </section>
+        <div class="categoria-card">
+            <h3>Estética y Aseo</h3>
+            <p>Todo para que luzcan increíbles: shampoos especiales, cardinas, tijeritas, alicates y accesorios de peluquería.</p>
+        </div>
 
-        <section class="sobre-imagen">
-            <img src="../assets/logo/Logo princ.jpg" alt="Imagen principal de Animal Eyes">
-        </section>
+        <div class="categoria-card">
+            <h3>Higiene</h3>
+            <p>Piedritas para gato de todo tipo (clásicas, sanitarias y premium) para mantener tu hogar siempre limpio.</p>
+        </div>
 
-    </main>
+        <div class="categoria-card">
+            <h3>Confort y Más</h3>
+            <p>Accesorios de todo tipo: colchones súper cómodos, cuchas resistentes y juguetes para todas las edades.</p>
+        </div>
+    </section>
+</main>
 
     <!-- FOOTER -->
     <footer class="main-footer">
