--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="encabezado" id="encabezado-inicio">
 
         <a href="./index.html" class="logo">
-            <img src="./assets/logo/Logo princ.jpg" alt="Logo de Animal Eyes">
+            <img src="./assets/logo/Logo princ.jpg" alt="Logo de Animal Eyes" class="logo princcc">
         </a>
 
         <h1>Animal Eyes</h1>
