--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <header class="encabezado" id="encabezado-inicio">
 
         <a href="./index.html" class="logo">
-            <img src="./assets/logo/Logo princ.jpg" alt="Logo de Animal Eyes" class="logo princcc">
+            <img src="./assets/logo/Logo princ.jpg" alt="Logo de Animal Eyes" class="logo-img">
         </a>
 
         <h1>Animal Eyes</h1>
 
-        <nav>
+        <nav class="navbar">
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./pages/Sobre Nosotros.html">Sobre Nosotros</a></li>
