--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>Bienvenidos a Animal Eyes</h1>
             <p>Especialistas en el cuidado de tu mejor amigo</p>
 </section>
-        <img src="assets/img/cute-and-happy-dog-png.png" class= img-princ alt="Perro animal eyes">
+        <img src="assets/img/para dsp/cute-and-happy-dog-png.png" class= img-princ alt="Perro animal eyes">
         <section class="shop-invite">
         <h2>Todo lo que su mirada necesita</h2>
         <p>Encontrá accesorios, gotas y protectores de la mejor calidad.</p>
