--- a/pages/Sobre Nosotros.html
+++ b/pages/Sobre Nosotros.html
@@ -43,7 +43,7 @@
         </p>
     </section>
 
-    <section class="productos-grid">
+    <section class="card-grid">
         <div class="categoria-card">
             <h3>Nutrición</h3>
             <p>Contamos con los mejores alimentos para perros, gatos y pájaros. Variedad de marcas y necesidades nutricionales.</p>
