--- a/pages/tiendas.html
+++ b/pages/tiendas.html
@@ -11,7 +11,6 @@
 
 <body class="pagina-tiendas">
 
-    <!-- HEADER (IGUAL AL INDEX) -->
     <header class="encabezado">
 
         <a href="../index.html" class="logo">
@@ -35,82 +34,70 @@
     <!-- MAIN -->
     <main class="main-home">
 
-        <section class="tienda-contenedor">
+
+<section class="tienda-contenedor">
     <h2 class="titulo-tienda">Nuestros Productos</h2>
     
     <div class="productos-grid">
         <article class="producto-card">
-            <img src="../assets/img/usadas/hueso bolsa.jpg" alt="Dispenser de bolsas huesito">
-            <h3>Dispenser de bolsas Huesito</h3>
+            <img src="assets/img/dispenser-rosa.jpg" alt="Dispenser de bolsas huesito">
+            <h3>Dispenser Huesito</h3>
             <p class="precio">$1.500</p>
             <button class="btn-comprar">Agregar al carrito</button>
         </article>
 
         <article class="producto-card">
-            <img src="../assets/img/usadas/brosa.jpg" alt="Comedero rosa con brillos">
+            <img src="assets/img/comedero-rosa.jpg" alt="Comedero rosa con brillos">
             <h3>Comedero Glitter Rosa</h3>
             <p class="precio">$2.200</p>
             <button class="btn-comprar">Agregar al carrito</button>
         </article>
 
         <article class="producto-card">
-            <img src="../assets/img/usadas/bmetal1.jpg" alt="Comedero de acero inoxidable">
+            <img src="assets/img/comedero-acero.jpg" alt="Comedero de acero inoxidable">
             <h3>Comedero Premium Acero</h3>
             <p class="precio">$3.800</p>
             <button class="btn-comprar">Agregar al carrito</button>
         </article>
 
         <article class="producto-card">
-            <img src="../assets/img/usadas/pelinteractiva1.jpg" alt="Juguete interactivo para gatos">
-            <h3>pelota Interactiva</h3>
+            <img src="assets/img/juguete-inteligente.jpg" alt="Juguete interactivo para gatos">
+            <h3>Smart Ball Interactiva</h3>
             <p class="precio">$5.500</p>
             <button class="btn-comprar">Agregar al carrito</button>
         </article>
 
 <article class="producto-card">
-    <img src="../assets/img/usadas/pretalcam.jpg" alt="Pretal camuflado para perro">
-    <h3>Pretal Camuflado</h3>
+    <img src="assets/img/pretalcam.jpg" alt="Pretal camuflado para perro">
+    <h3>Pretal Camuflado XS</h3>
     <p class="precio">$4.200</p>
     <button class="btn-comprar">Agregar al carrito</button>
 </article>
 
 <article class="producto-card">
-    <img src="../assets/img/usadas/pelotas.jpg" alt="Pack de pelotas para perros">
-    <h3>Pack Pelotas</h3>
+    <img src="assets/img/pelotas.jpg" alt="Pack de pelotas de tenis para perros">
+    <h3>Pack Pelotas Tenis</h3>
     <p class="precio">$2.800</p>
     <button class="btn-comprar">Agregar al carrito</button>
 </article>
 
 <article class="producto-card">
-    <img src="../assets/img/usadas/gorro.jpg" alt="Gorro cuadriculado para mascota">
-    <h3>Gorro a cuadros Rosa</h3>
+    <img src="assets/img/gorro.jpg" alt="Gorro cuadriculado para mascota">
+    <h3>Gorro Checkered Rosa</h3>
     <p class="precio">$1.900</p>
     <button class="btn-comprar">Agregar al carrito</button>
 </article>
 
 <article class="producto-card">
-    <img src="../assets/img/usadas/bplas.jpg" alt="Comedero blanco con dibujo de huesito">
-    <img src="../assets/img/usadas/bplasoso.jpg" alt="Comedero blanco con dibujo 2">
+    <img src="assets/img/bplas.jpg" alt="Comedero blanco con dibujo de huesito">
     <h3>Comedero Bone White</h3>
     <p class="precio">$1.200</p>
     <button class="btn-comprar">Agregar al carrito</button>
 </article>
 
 
-
-
-
-
-
-
-
-
-
-
     </div>
-
-
-
+</section>
 
 
 
