--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                 <ul>
                     <li>
                         <a href="https://www.instagram.com/animaleyes.ok/" target="_blank">
-                            <img src="./assets/logo/ig.png" alt="Instagram" class="logos">
+                            <img src="../assets/logo/ig.png" alt="Instagram" class="logos">
                         </a>
                     </li>
 
                     <li>
                         <a href="https://wa.me/5491160572081?text=Hola,%20¿cómo%20va?%20Quería%20consultarles%20el%20precio%20de%20este%20producto:" target="_blank">
-                            <img src="./assets/logo/pngegg.png" alt="WhatsApp" class="logos">
+                            <img src="../assets/logo/pngegg.png" alt="WhatsApp" class="logos">
                         </a>
                     </li>
                 </ul>
