--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="pagina-home">
 
-    <!-- HEADER -->
+    
     <header class="encabezado" id="encabezado-inicio">
 
         <a href="./index.html" class="logo">
@@ -32,7 +32,7 @@
 
     </header>
 
-    <!-- MAIN -->
+    
     <main class="main-home">
 
         <section class="hero">
@@ -41,14 +41,13 @@
 </section>
         <img src="assets/img/para dsp/cute-and-happy-dog-png.png" class= img-princ alt="Perro animal eyes">
         <section class="shop-invite">
-        <h2>Todo lo que su mirada necesita</h2>
+        <h2>Todo lo que su mascota necesita</h2>
         <p>Encontrá accesorios, gotas y protectores de la mejor calidad.</p>
         <a href="pages/Tiendas.html" class="btn-tienda">Ir a la Tienda Online</a>
 </section>
 
     </main>
 
-    <!-- FOOTER -->
     <footer class="main-footer">
 
         <div class="footer-redes">
