--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,8 +9,7 @@
 
 
 </head>
-<body class="contacto1">
-    <!-- HEADER -->
+<body>
     <header class="encabezado">
 
         <a href="../index.html" class="logo">
@@ -35,7 +34,7 @@
 
 
 
-<main class="main-home">
+<main class="main-contacto">
 
 
 <section class="contacto-seccion">
@@ -66,14 +65,14 @@
                 <h3>📍 Sucursal 1</h3>
                 <p>Defilippi 818, Ituzaingo</p>
                 <p>📞 Tel: +54 9 11 6057-2081</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2712093564933!2d-58.66713702421733!3d-34.64785305983039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbf433831a1c3%3A0x78c55d5e0c2aa0a0!2sETB%2C%20Concejal%20Nicol%C3%A1s%20Defilippi%20818%2C%20B1714%20Ituzaing%C3%B3%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1763600772199!5m2!1ses-419!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2712093564933!2d-58.66713702421733!3d-34.64785305983039!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbf433831a1c3%3A0x78c55d5e0c2aa0a0!2sETB%2C%20Concejal%20Nicol%C3%A1s%20Defilippi%20818%2C%20B1714%20Ituzaing%C3%B3%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1763600772199!5m2!1ses-419!2sar" width="500" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
             <div class="sucursal-card">
                 <h3>📍 Sucursal 2</h3>
                 <p>Bacacay 709, Ituzaingo</p>
                 <p>📞 Tel: +54 9 11 6057-2081</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2007614609115!2d-58.672135424217316!3d-34.649632459924504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbf680f31da8b%3A0xed7aab885686474f!2sBacacay%20709%2C%20B1714%20Ituzaing%C3%B3%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1763604615190!5m2!1ses-419!2sar" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2007614609115!2d-58.672135424217316!3d-34.649632459924504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcbf680f31da8b%3A0xed7aab885686474f!2sBacacay%20709%2C%20B1714%20Ituzaing%C3%B3%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1763604615190!5m2!1ses-419!2sar" width="500" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </div>
