--- a/pages/faq.html
+++ b/pages/faq.html
@@ -35,6 +35,41 @@
     <!-- MAIN -->
     <main class="main-home">
 
+
+<section class="faq-seccion">
+    <div class="faq-contenedor">
+        <h2 class="faq-titulo">Preguntas Frecuentes</h2>
+
+        <details class="faq-item">
+            <summary>¿Hacen envíos a todo el país?</summary>
+            <div class="faq-respuesta">
+                <p>¡Sí! Llegamos a cada rincón del país a través de correo privado. El tiempo de entrega suele ser de 3 a 5 días hábiles.</p>
+            </div>
+        </details>
+
+        <details class="faq-item">
+            <summary>¿Qué medios de pago aceptan?</summary>
+            <div class="faq-respuesta">
+                <p>Aceptamos tarjetas de crédito, débito, transferencias bancarias y Mercado Pago. ¡Tú eliges la que más te convenga!</p>
+            </div>
+        </details>
+
+        <details class="faq-item">
+            <summary>¿Tienen garantía los productos tecnológicos?</summary>
+            <div class="faq-respuesta">
+                <p>Todos nuestros productos inteligentes (como la pelota inteligente) tienen una garantía de 3 meses por fallas de fábrica.</p>
+            </div>
+        </details>
+
+        <details class="faq-item">
+            <summary>¿Puedo cambiar un producto si no le quedó a mi mascota?</summary>
+            <div class="faq-respuesta">
+                <p>¡Claro! Tienes 15 días para realizar cambios de talles (como en pretales o gorritos), siempre que el producto esté sin uso y en su empaque original.</p>
+            </div>
+        </details>
+
+    </div>
+</section>
     </main>
 
     <footer class="main-footer">
