--- a/pages/faq.html
+++ b/pages/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tiendas | Animal Eyes</title>
+    <title>FAQ | Animal Eyes</title>
 
     <link rel="shortcut icon" href="../assets/logo/Logo princ.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/styles.css">
