--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Eyes | Todo lo esencial para tu mascota</title>
+   
+    <link rel="shortcut icon" href="./assets/logo/Logo princ.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="styles/styles.css">
+    
+    
     <meta name="description" content="Animal Eyes ofrece lo mejor en accesorios y comodidad para tus mascotas. Descubre nuestras tiendas, conócenos y contáctanos.">
     <meta name="keywords" content="alimento para perros, comida para gatos, comida para pájaros, accesorios para mascotas, shampoo para perros, higiene animal, cuchas para perros, camas para gatos, pretales, arneses, juguetes para mascotas, ropa para perros, cuidado de mascotas, Animal Eyes">
     <meta name="author" content="Tomas Gorosito">
     <meta name="owner" content="Amimal Eyes">
-    <link rel="shortcut icon" href="./assets/logo/Logo princ.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="styles/styles.css">
+
+    <meta property="og:title" content="Animal Eyes | Todo lo esencial para tu mascota">
+    <meta property="og:image" content="https://raw.githubusercontent.com/goro462/Animal-Eyes/refs/heads/main/assets/logo/Logo%20princ.jpg"> 
+    <meta property="og:url" content="https://goro462.github.io/Animal-Eyes/">
+    <meta property="og:description" content="Animal Eyes ofrece lo mejor en accesorios y comodidad para tus mascotas. Descubre nuestras tiendas, conócenos y contáctanos.">
 </head>
 
 <body class="pagina-home">
