--- a/pages/faq.html
+++ b/pages/faq.html
@@ -61,14 +61,14 @@
         <details class="faq-item">
             <summary>¿Qué medios de pago aceptan?</summary>
             <div class="faq-respuesta">
-                <p>Aceptamos tarjetas de crédito, débito, transferencias bancarias y Mercado Pago. ¡Tú eliges la que más te convenga!</p>
+                <p>Aceptamos tarjetas de crédito, débito, transferencias bancarias y Mercado Pago. </p>
             </div>
         </details>
 
         <details class="faq-item">
             <summary>¿Tienen garantía los productos tecnológicos?</summary>
             <div class="faq-respuesta">
-                <p>Todos nuestros productos inteligentes (como la pelota inteligente) tienen una garantía de 3 meses por fallas de fábrica.</p>
+                <p>Todos nuestros productos (como la pelota inteligente) tienen una garantía de 3 meses por fallas de fábrica.</p>
             </div>
         </details>
 
