--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     
     
-    <meta name="description" content="Animal Eyes ofrece lo mejor en accesorios y comodidad para tus mascotas. Descubre nuestras tiendas, conócenos y contáctanos.">
+    <meta name="description" content="Animal Eyes ofrece lo mejor en accesorios y comodidad para tus mascotas. Descubre nuestra tienda, conócenos y contáctanos.">
     <meta name="keywords" content="alimento para perros, comida para gatos, comida para pájaros, accesorios para mascotas, shampoo para perros, higiene animal, cuchas para perros, camas para gatos, pretales, arneses, juguetes para mascotas, ropa para perros, cuidado de mascotas, Animal Eyes">
     <meta name="author" content="Tomas Gorosito">
     <meta name="owner" content="Amimal Eyes">
