--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="shop-invite">
         <h2>Todo lo que su mascota necesita</h2>
         <p>Encontrá accesorios, gotas y protectores de la mejor calidad.</p>
-        <a href="pages/Tiendas.html" class="btn-tienda">Ir a la Tienda Online</a>
+        <a href="pages/tiendas.html" class="btn-tienda">Ir a la Tienda Online</a>
 </section>
 
     </main>
